--- a/package.json
+++ b/package.json
@@ -6,19 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "node -r dotenv/config ./scripts/seed.js"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.4",
+    "@vercel/postgres": "^0.8.0",
+    "bcrypt": "^5.1.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "use-debounce": "^10.0.1",
+    "vercel": "^34.2.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "mini-css-extract-plugin": "^2.9.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
